--- a/cat-card/cat-cards/src/index.html
+++ b/cat-card/cat-cards/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>CatCards</title>
   <base href="/">
-
+  <script src="https://use.fontawesome.com/faffa271ef.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
