--- a/cat-card/cat-cards/src/index.html
+++ b/cat-card/cat-cards/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>CatCards</title>
   <base href="/">
   <script src="https://use.fontawesome.com/faffa271ef.js"></script>
